--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.7",
     "@types/node": "20.5.9",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
@@ -21,16 +22,20 @@
     "js-cookie": "^3.0.5",
     "next": "13.4.19",
     "postcss": "8.4.29",
+    "qs": "^6.11.2",
     "query-string": "^8.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.11.0",
+    "react-redux": "^8.1.3",
+    "redux-persist": "^6.0.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2",
     "yup": "^1.3.2",
     "yup-password": "^0.2.2"
   },
   "devDependencies": {
-    "@types/js-cookie": "^3.0.4"
+    "@types/js-cookie": "^3.0.4",
+    "@types/qs": "^6.9.8"
   }
 }
