--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gsap": "^3.12.2",
     "js-cookie": "^3.0.5",
     "next": "13.4.19",
+    "nextjs-toploader": "^1.4.2",
     "postcss": "8.4.29",
     "qs": "^6.11.2",
     "query-string": "^8.1.0",
