--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gsap": "^3.12.2",
     "js-cookie": "^3.0.5",
     "next": "13.4.19",
+    "next13-progressbar": "^1.0.4",
     "nextjs-toploader": "^1.4.2",
     "postcss": "8.4.29",
     "qs": "^6.11.2",
@@ -28,6 +29,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.11.0",
+    "react-phone-number-input": "^3.3.7",
     "react-redux": "^8.1.3",
     "redux-persist": "^6.0.0",
     "tailwindcss": "3.3.3",
