--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.7",
+    "@tailwindcss/typography": "^0.5.10",
     "@tanstack/query-sync-storage-persister": "^5.0.0",
     "@tanstack/react-query": "^5.0.0",
     "@tanstack/react-query-persist-client": "^5.0.0",
@@ -18,6 +19,7 @@
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
     "axios": "^1.5.1",
+    "bufferutil": "^4.0.8",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
     "formik": "^2.4.5",
@@ -33,11 +35,14 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.11.0",
     "react-phone-number-input": "^3.3.7",
+    "react-quill": "^2.0.0",
     "react-redux": "^8.1.3",
     "redux-persist": "^6.0.0",
     "socket.io-client": "^4.7.2",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2",
+    "utf-8-validate": "^6.0.3",
+    "ws": "^8.14.2",
     "yup": "^1.3.2",
     "yup-password": "^0.2.2"
   },
