--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-quill": "^2.0.0",
     "react-redux": "^8.1.3",
     "redux-persist": "^6.0.0",
+    "sharp": "^0.32.6",
     "socket.io-client": "^4.7.2",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2",
