--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,6 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    restart: always
+    # restart: always
     ports:
       - 3000:3000
