--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-NEXT_PUBLIC_BASE_URL=http://137.184.208.185:6001
+# NEXT_PUBLIC_BASE_URL=http://137.184.208.185:6001
+NEXT_PUBLIC_BASE_URL=http://localhost:6001
