--- a/package.json
+++ b/package.json
@@ -21,18 +21,18 @@
     "axios": "^1.5.1",
     "bufferutil": "^4.0.8",
     "eslint": "8.48.0",
-    "eslint-config-next": "13.4.19",
+    "eslint-config-next": "^14.0.1",
     "formik": "^2.4.5",
     "gsap": "^3.12.2",
     "js-cookie": "^3.0.5",
-    "next": "13.4.19",
+    "next": "^14.0.1",
     "next13-progressbar": "^1.0.4",
     "nextjs-toploader": "^1.4.2",
     "postcss": "8.4.29",
     "qs": "^6.11.2",
     "query-string": "^8.1.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-phone-number-input": "^3.3.7",
     "react-quill": "^2.0.0",
