--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "formik": "^2.4.5",
     "gsap": "^3.12.2",
     "js-cookie": "^3.0.5",
+    "moment": "^2.29.4",
     "next": "^14.0.1",
     "next13-progressbar": "^1.0.4",
     "nextjs-toploader": "^1.4.2",
