--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tailwindcss/typography": "^0.5.10",
     "@tanstack/query-sync-storage-persister": "^5.0.0",
     "@tanstack/react-query": "^5.0.0",
+    "@tanstack/react-query-next-experimental": "^5.8.1",
     "@tanstack/react-query-persist-client": "^5.0.0",
     "@types/node": "20.5.9",
     "@types/react": "18.2.21",
