--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 # NEXT_PUBLIC_BASE_URL=http://137.184.208.185:6001
 NEXT_PUBLIC_BASE_URL=http://localhost:6001
-NEXT_PUBLIC_NOTIFICATION_URL=http://localhost:6200
+NEXT_PUBLIC_NOTIFICATION_URL=http://67.205.168.95:6200
